# SPTnano

./: .gitignore  404.html  CITATION.cff  HPC_README.md  LICENSE.md  README.md  compare_slurm.sh  environment.yml  environment_01jul2025_1.yml  environment_HPC.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_pip.txt  slurm_job.sh  transformer_development.md
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
LICENSE/: index.html
api/: index.html
docs/: api.md
notebooks/: AUGMENTATION_ANALYSIS_CLEAN_actual_SAVED.ipynb  Clean_walkthrough_MJS.ipynb  HIERARCHICAL_GATING_COMBINED.ipynb  HIERARCHICAL_GATING_COMBINED_2026.ipynb  MASTERPOLARS_DF.ipynb  Main2025.ipynb  Master_notebook2.ipynb  SEGMENT_SHUFFLE_4_scale_10 to 50_angleperturbationrange.ipynb  SEGMENT_SHUFFLE_ANALYSIS.ipynb  VISUALIZATION_2025.ipynb  batch_HPC_notebook.ipynb  htt_motion_transformer.pt  minimal_notebook_for_HPC.ipynb  motion_encoder.pt  walkthrough.ipynb
scripts/: grid_search_train.py  train_transformer_grid_wsl2.py
search/: search_index.json
src/: config.py
src/SPTnano/: HPC.py  __init__.py  augmentations.py  batch_roi_selector.py  config.py  features.py  helper_scripts.py  tensorboard_utils.py  training_utils.py  transformer.py  visualization.py
tests/: test_augmentations.py  test_config.py  test_dummy.py  test_features.py  test_helper_scripts.py  test_transformer.py
