[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[project]
authors = [
    {email = "m.j.shannon@pm.me", name = "Michael Shannon"},
]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "scikit-learn>=0.24.0",
    "scikit-image>=0.21.0",
    "trackpy>=0.6.0",
    "nd2>=0.10.0",
    "pims>=0.6.0",
    "tifffile>=2023.7.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.29",
    "colorcet>=3.0.0",
    "tensorboard>=2.12.0",
    "torch>=2.0.0",
    "tqdm>=4.62.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.32.0",
    "ipywidgets>=8.0.0",
    "notebook>=6.4.0",
]
description = "Pipeline for easy single particle detection, linking/tracking, and analysis"
dynamic = [
    "version",
]
keywords = [
    "single-particle-tracking",
    "trajectory-analysis", 
    "biophysics",
    "microscopy",
    "transformer",
    "machine-learning",
]
name = "SPTnano"
optional-dependencies = {dev = [
    "build",
    "mypy",
    "pre-commit",
    "ruff",
    "tox",
    "twine",
], docs = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
], test = [
    "pytest",
    "pytest-cov",
]}
readme = "README.md"
requires-python = ">=3.10"
license.file = "LICENSE.md"
urls.homepage = "https://github.com/Michael-shannon/SPTnano"

[tool.coverage]
report = {sort = "cover"}
run = {branch = true, parallel = true, source = [
    "SPTnano",
]}
paths.source = [
    "src",
    ".tox*/*/lib/python*/site-packages",
]

[tool.mypy]
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--import-mode=importlib",
    "--verbose",
]
testpaths = [
    "tests",
]

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
    "COM812", # trailing commas (ruff-format recommended)
    "D203", # no-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D407", # removed dashes lines under sections
    "D417", # argument description in docstring (unreliable)
    "ISC001", # simplify implicit str concatenation (ruff-format recommended)
]
lint.per-file-ignores = {"tests*" = [
    "INP001", # File is part of an implicit namespace package.
    "S101", # Use of `assert` detected
]}
lint.select = [
    "ALL",
]
lint.isort.known-first-party = [
    "SPTnano",
]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = [
    "classmethod",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/SPTnano/_version.py"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false

[tool.tox]
legacy_tox_ini = """
    [gh-actions]
    python =
        3.10: py310
        3.11: py311
        3.12: py312

    [testenv]
    commands =
        pytest --cov --cov-report=xml
    extras =
        test

    [testenv:docs]
    commands =
        mkdocs build --strict
    extras =
        docs

    [tox]
    env_list =
        py310
        py311
        py312
"""
